# beat-the-books-public

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backtest.yml  refresh-odds.yml  refresh-site.yml  snapshot-odds.yml  tests.yml
backtest/: results_cache.json
config/: model_config.json
docs/: app.js  experiment.html  index.html  protocol.md  styles.css
docs/data/: 2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  (+20 more)
reports/: backtest.md  historical_evaluation.md
scripts/: backfill_game_log.py  backtest.py  build_roster_cache.py  evaluate_history.py  snapshot_odds.py
src/mlb_model/: backtest_grade.py  backtest_report.py  backtest_run.py  db.py  (+15 more)
tests/: test_backtest_engine.py  test_backtest_stats.py  test_closing_line.py  test_edge_classification.py  test_game_log.py  test_grade_picks.py  test_meta_model.py  test_metrics.py  test_odds_engine.py  test_odds_math.py  test_odds_quota.py  test_rate_shrinkage.py  test_snapshot_odds.py
(+45 files in other folders)
